[package]
name = "quake-inverse-sqrt"
description = "A rust implementation of the Quake Inverse Square root alghorithm"
version = "0.1.2"
edition = "2021"
license = "GPL-3.0-only"
keywords = ["math", "sqrt"]
categories = ["mathematics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
